Implementa CRUD de Despesa