@@ -2,12 +2,13 @@ package com.analisedecredito.aplicacao_analise_credito.service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.rest.webmvc.ResourceNotFoundException;
 import org.springframework.stereotype.Service;
 
 import com.analisedecredito.aplicacao_analise_credito.dto.DespesaDto;
+import com.analisedecredito.aplicacao_analise_credito.dto.DespesaReadDto;
 import com.analisedecredito.aplicacao_analise_credito.model.Cliente;
 import com.analisedecredito.aplicacao_analise_credito.model.Despesa;
 import com.analisedecredito.aplicacao_analise_credito.model.DespesaTipo;
@@ -28,39 +29,65 @@ public class DespesaService {
     DespesaTipoRepository despesaTipoRepository;
 
     /* Retorna despesa de acordo com o id */
-    public DespesaDto findById(Integer id) {
-        Optional<Despesa> despesaOpt = repository.findById(id);
-
-        if (despesaOpt.isPresent()) {
-            Despesa despesa = despesaOpt.get();
-            return new DespesaDto(despesa, despesa.getCliente(), despesa.getDespesaTipo());
-        } else {
-            throw new RuntimeException("Despesa não encontrada com o ID: " + id);
-        }
+    public DespesaReadDto findById(Integer id) {
+        return new DespesaReadDto(repository.findById(id).get());
     }
 
     /* Retorna uma lista de todas as despesas cadastrados */
-    public List<DespesaDto> list() {
+    public List<DespesaReadDto> list() {
         List<Despesa> listaDespesa = repository.findAll();
-        return listaDespesa.stream()
-                .map(despesa -> new DespesaDto(despesa, despesa.getCliente(), despesa.getDespesaTipo()))
-                .collect(Collectors.toList());
+        return listaDespesa.stream().map(DespesaReadDto::new).toList();
     }
 
     /* Cria uma nova despesa com base nos dados fornecidos */
     public DespesaDto create(DespesaDto despesaDto) {
-        Cliente cliente = clienteRepository.findById(despesaDto.getCliente().getIdCliente())
-                .orElseThrow(() -> new RuntimeException("Cliente não encontrado com o ID: " + despesaDto.getDespesaTipo().getIdDespesaTipo()));
 
-        DespesaTipo despesaTipo = despesaTipoRepository.findById(despesaDto.getDespesaTipo().getIdDespesaTipo())
-                .orElseThrow(() -> new RuntimeException("Tipo de Despesa não encontrado com o ID: " + despesaDto.getDespesaTipo().getIdDespesaTipo()));
+        Optional<Cliente> clienteOpt = clienteRepository.findById(despesaDto.getCliente());
+        Optional<DespesaTipo> despesaTipoOpt = despesaTipoRepository.findById(despesaDto.getDespesaTipo());
+
+        if (clienteOpt.isEmpty()) {
+            throw new ResourceNotFoundException("Cliente não encontrado com o id " + despesaDto.getCliente());
+        }
+        if (despesaTipoOpt.isEmpty()) {
+            throw new ResourceNotFoundException(
+                    "Tipo de despesa não encontrado com o id " + despesaDto.getDespesaTipo());
+        }
 
         Despesa despesa = new Despesa();
-        despesa.setCliente(cliente);
-        despesa.setDespesaTipo(despesaTipo);
+        despesa.setIdDespesa(despesaDto.getIdDespesa());
+        despesa.setCliente(clienteOpt.get());
+        despesa.setDespesaTipo(despesaTipoOpt.get());
         despesa.setValorDespesa(despesaDto.getValorDespesa());
         repository.save(despesa);
 
-        return new DespesaDto(despesa, cliente, despesaTipo);
+        return new DespesaDto(despesa);
     }
+
+    public DespesaDto update(Integer id,DespesaDto despesaDto) {
+          
+        Optional<Despesa> despesaOpt = repository.findById(id);
+        if (despesaOpt.isPresent()) {
+            Despesa despesa = despesaOpt.get();
+            Optional<Cliente> clienteOpt = clienteRepository.findById(despesaDto.getCliente());
+            Optional<DespesaTipo> despesaTipoOpt = despesaTipoRepository.findById(despesaDto.getDespesaTipo());
+
+            if (clienteOpt.isPresent()) {
+                Cliente cliente = clienteOpt.get();
+                DespesaTipo despesaTipo = despesaTipoOpt.get();
+                despesa.setCliente(cliente);
+                despesa.setDespesaTipo(despesaTipo);
+                despesa.setIdDespesa(despesaDto.getIdDespesa());
+                despesa.setValorDespesa(despesaDto.getValorDespesa());
+
+                Despesa updatedDespesa= repository.save(despesa);
+                return new DespesaDto(updatedDespesa);
+            } else {
+                throw new ResourceNotFoundException(
+                        "Perfil de crédito não encontrado com id " + despesaDto.getCliente());
+            }
+        } else {
+            throw new ResourceNotFoundException("Cliente não encontrado com id " + id);
+        }
+    }
+
 }
